# pyChoreographer

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  setup.py
.github/workflows/: package-release.yml  python-publish.yml
docs/: conf.py  index.md  requirements.txt
docs/_build/: .buildinfo  codeofconduct.html  contributing.html  genindex.html  guide.html  index.html  license.html  objects.inv  quickstart.html  search.html  searchindex.js  tutorials.html
docs/_build/.doctrees/: codeofconduct.doctree  contributing.doctree  environment.pickle  guide.doctree  index.doctree  license.doctree  quickstart.doctree  tutorials.doctree
docs/_build/_sources/: guide.md.txt  quickstart.md.txt  tutorials.md.txt
pychoreographer/: __init__.py  files_operations.py  pychoreographer.py
pychoreographer.egg-info/: SOURCES.txt
